- Fixing icon for bottom navigation - Add fragment for all bottom nav menu

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,14 +12,26 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.example.berasai.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:id="@+id/navigation_deskripsi"
+        android:name="com.example.berasai.ui.deskripsi.DeskripsiFragment"
+        android:label="@string/title_deskripsi"
+        tools:layout="@layout/fragment_deskripsi" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.example.berasai.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:id="@+id/navigation_scan"
+        android:name="com.example.berasai.ui.scan.ScanFragment"
+        android:label="@string/title_scan"
+        tools:layout="@layout/fragment_scan" />
+
+    <fragment
+        android:id="@+id/navigation_price"
+        android:name="com.example.berasai.ui.price.PriceFragment"
+        android:label="@string/title_price"
+        tools:layout="@layout/fragment_price" />
+
+    <fragment
+        android:id="@+id/navigation_profile"
+        android:name="com.example.berasai.ui.profile.ProfileFragment"
+        android:label="@string/title_profile"
+        tools:layout="@layout/fragment_profile" />
 </navigation>
