--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -15,7 +15,7 @@
     <item
         android:id="@+id/navigation_scan"
         android:icon="@drawable/scan"
-        android:title=""/>
+        android:title="@string/title_scan"/>
 
     <item
         android:id="@+id/navigation_price"
