--- a/app/src/main/res/layout/activity_detail_konten.xml
+++ b/app/src/main/res/layout/activity_detail_konten.xml
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_marginStart="-50dp"
-            android:layout_margiEnd="-50dp"
+            android:layout_marginEnd="-50dp"
             android:background="@drawable/bg_overlay"
             android:gravity="bottom"
             android:orientation="horizontal" />
