--- a/app/src/main/res/drawable/background_round_yellow.xml
+++ b/app/src/main/res/drawable/background_round_yellow.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FFB400"/>
-    <stroke android:width="5dp" android:color="@android:color/white"/>
-    <corners android:radius="20dp"/>
+    <solid android:color="@color/yellow3"/>
+    <corners android:radius="30dp"/>
 </shape>
