--- a/app/src/main/res/layout/fragment_scan.xml
+++ b/app/src/main/res/layout/fragment_scan.xml
@@ -8,22 +8,87 @@
     android:orientation="vertical"
     tools:context=".ui.scan.ScanFragment">
 
-    <Button
-        android:id="@+id/button_camera"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/mOpsi"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:text="Camera"
-        android:layout_marginTop="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp" />
+        android:layout_marginTop="30dp"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:text="Opsi Deteksi"
+        android:textColor="@color/yellow2"
+        android:textAppearance="@style/CustomtextStyle2"/>
 
-    <Button
-        android:id="@+id/button_gallery"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/mDeskripsi"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:text="Gallery"
-        android:layout_marginTop="8dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp" />
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:text="Deteksi beras melalui gambar yang diambil dari kamera atau galeri"
+        android:textColor="@color/black"
+        android:textAppearance="@style/CustomtextStyle1"/>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/button_camera"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:layout_gravity="start|center"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="20dp"
+        android:clickable="true"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="25dp"
+        app:cardElevation="5dp"
+        app:cardUseCompatPadding="true">
+
+    <ImageView
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_gravity="center"
+        android:layout_marginBottom="10dp"
+        android:src="@drawable/ic_camera"
+        app:tint="@color/green3" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Deteksi Melalui Kamera"
+        android:textAppearance="@style/CustomtextStyle3"
+        android:textColor="@color/green3"
+        android:layout_marginTop="60dp"
+        android:layout_gravity="center"/>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/button_gallery"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:layout_gravity="start|center"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="20dp"
+        android:clickable="true"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="25dp"
+        app:cardElevation="5dp"
+        app:cardUseCompatPadding="true">
+
+        <ImageView
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_gravity="center"
+            android:layout_marginBottom="10dp"
+            android:src="@drawable/ic_galeri"
+            app:tint="@color/green3" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Deteksi Melalui Gambar"
+            android:textAppearance="@style/CustomtextStyle3"
+            android:textColor="@color/green3"
+            android:layout_marginTop="60dp"
+            android:layout_gravity="center"/>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
