--- a/app/src/main/res/layout/activity_kamera.xml
+++ b/app/src/main/res/layout/activity_kamera.xml
@@ -96,68 +96,76 @@
 
             </androidx.cardview.widget.CardView>
 
-            <androidx.cardview.widget.CardView
+            <LinearLayout
+                android:id="@+id/hasil"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardBackgroundColor="@color/green3"
-                android:layout_marginTop="15dp"
-                app:cardCornerRadius="15dp"
-                app:cardElevation="0dp"
-                app:cardUseCompatPadding="true">
+                android:orientation="vertical" >
 
-                <TextView
-                    android:id="@+id/tvHasil1"
-                    android:layout_width="wrap_content"
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawablePadding="10dp"
-                    android:padding="8dp"
-                    android:text="Hasil 1"
-                    android:layout_gravity="center"
-                    android:textAppearance="@style/CustomtextStyle1"/>
+                    app:cardBackgroundColor="@color/green3"
+                    android:layout_marginTop="15dp"
+                    app:cardCornerRadius="15dp"
+                    app:cardElevation="0dp"
+                    app:cardUseCompatPadding="true">
 
-            </androidx.cardview.widget.CardView>
+                    <TextView
+                        android:id="@+id/tvHasil1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:drawablePadding="10dp"
+                        android:padding="8dp"
+                        android:text="Hasil 1"
+                        android:layout_gravity="center"
+                        android:textAppearance="@style/CustomtextStyle1"/>
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardBackgroundColor="@color/green3"
-                android:layout_marginTop="10dp"
-                app:cardCornerRadius="15dp"
-                app:cardElevation="0dp"
-                app:cardUseCompatPadding="true">
+                </androidx.cardview.widget.CardView>
 
-                <TextView
-                    android:id="@+id/tvHasil2"
-                    android:layout_width="wrap_content"
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawablePadding="10dp"
-                    android:padding="8dp"
-                    android:text="Hasil 2"
-                    android:layout_gravity="center"
-                    android:textAppearance="@style/CustomtextStyle1"/>
+                    app:cardBackgroundColor="@color/green3"
+                    android:layout_marginTop="10dp"
+                    app:cardCornerRadius="15dp"
+                    app:cardElevation="0dp"
+                    app:cardUseCompatPadding="true">
 
-            </androidx.cardview.widget.CardView>
+                    <TextView
+                        android:id="@+id/tvHasil2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:drawablePadding="10dp"
+                        android:padding="8dp"
+                        android:text="Hasil 2"
+                        android:layout_gravity="center"
+                        android:textAppearance="@style/CustomtextStyle1"/>
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardBackgroundColor="@color/green3"
-                android:layout_marginTop="10dp"
-                app:cardCornerRadius="15dp"
-                app:cardElevation="0dp"
-                app:cardUseCompatPadding="true">
+                </androidx.cardview.widget.CardView>
 
-                <TextView
-                    android:id="@+id/tvHasil3"
-                    android:layout_width="wrap_content"
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawablePadding="10dp"
-                    android:padding="8dp"
-                    android:text="Hasil 3"
-                    android:layout_gravity="center"
-                    android:textAppearance="@style/CustomtextStyle1"/>
+                    app:cardBackgroundColor="@color/green3"
+                    android:layout_marginTop="10dp"
+                    app:cardCornerRadius="15dp"
+                    app:cardElevation="0dp"
+                    app:cardUseCompatPadding="true">
 
-            </androidx.cardview.widget.CardView>
+                    <TextView
+                        android:id="@+id/tvHasil3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:drawablePadding="10dp"
+                        android:padding="8dp"
+                        android:text="Hasil 3"
+                        android:layout_gravity="center"
+                        android:textAppearance="@style/CustomtextStyle1"/>
+
+                </androidx.cardview.widget.CardView>
+
+            </LinearLayout>
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
