--- a/app/src/main/res/layout/activity_galeri.xml
+++ b/app/src/main/res/layout/activity_galeri.xml
@@ -7,7 +7,7 @@
     tools:context=".GaleriActivity">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cvDeteksi"
+        android:id="@+id/mDetectButton"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_gravity="start|center"
@@ -57,6 +57,7 @@
 
 
         <ImageView
+            android:id="@+id/mPhotoImageView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:src="@drawable/image2"
@@ -108,58 +109,17 @@
                     app:cardUseCompatPadding="true">
 
                     <TextView
-                        android:id="@+id/tvHasil1"
+                        android:id="@+id/mResultTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:drawablePadding="10dp"
                         android:padding="8dp"
-                        android:text="Hasil 1"
+                        android:text="Hasil"
                         android:layout_gravity="center"
                         android:textAppearance="@style/CustomtextStyle1"/>
 
                 </androidx.cardview.widget.CardView>
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:cardBackgroundColor="@color/green3"
-                    android:layout_marginTop="10dp"
-                    app:cardCornerRadius="15dp"
-                    app:cardElevation="0dp"
-                    app:cardUseCompatPadding="true">
-
-                    <TextView
-                        android:id="@+id/tvHasil2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:drawablePadding="10dp"
-                        android:padding="8dp"
-                        android:text="Hasil 2"
-                        android:layout_gravity="center"
-                        android:textAppearance="@style/CustomtextStyle1"/>
-
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:cardBackgroundColor="@color/green3"
-                    android:layout_marginTop="10dp"
-                    app:cardCornerRadius="15dp"
-                    app:cardElevation="0dp"
-                    app:cardUseCompatPadding="true">
-
-                    <TextView
-                        android:id="@+id/tvHasil3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:drawablePadding="10dp"
-                        android:padding="8dp"
-                        android:text="Hasil 3"
-                        android:layout_gravity="center"
-                        android:textAppearance="@style/CustomtextStyle1"/>
-
-                </androidx.cardview.widget.CardView>
             </LinearLayout>
 
         </androidx.core.widget.NestedScrollView>
