--- a/app/src/main/res/layout/activity_galeri.xml
+++ b/app/src/main/res/layout/activity_galeri.xml
@@ -4,41 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/grey1"
     tools:context=".GaleriActivity">
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/mDetectButton"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_gravity="start|center"
-        android:layout_marginStart="150dp"
-        android:layout_marginTop="420dp"
-        android:clickable="true"
-        app:cardBackgroundColor="@color/green2"
-        app:cardCornerRadius="25dp"
-        app:cardElevation="5dp"
-        app:cardUseCompatPadding="true">
-
-        <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:padding="10dp"
-            android:layout_gravity="center"
-            android:layout_marginBottom="10dp"
-            android:src="@drawable/ic_search"
-            app:tint="@android:color/white" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Deteksi"
-            android:layout_marginBottom="5dp"
-            android:textAppearance="@style/CustomtextStyle1"
-            android:textColor="@color/white"
-            android:layout_gravity="center|bottom"/>
-
-
-    </androidx.cardview.widget.CardView>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -50,7 +17,7 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:layout_marginStart="100dp"
+            android:layout_gravity="center"
             android:text="Pilih Gambar"
             android:textAppearance="@style/CustomtextStyle1"
             android:background="@drawable/background_round_yellow" />
@@ -64,11 +31,51 @@
             android:layout_gravity="center"
             android:layout_marginTop="50dp" />
 
+    </LinearLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/mDetectButton"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="120dp"
+            android:layout_gravity="center"
+            android:clickable="true"
+            app:cardBackgroundColor="@color/green2"
+            app:cardCornerRadius="25dp"
+            app:cardElevation="5dp"
+            app:cardUseCompatPadding="true">
+
+            <ImageView
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:padding="10dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="10dp"
+                android:src="@drawable/ic_search"
+                app:tint="@android:color/white" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Deteksi"
+                android:layout_marginBottom="5dp"
+                android:textAppearance="@style/CustomtextStyle1"
+                android:textColor="@color/white"
+                android:layout_gravity="center|bottom"/>
+
+
+        </androidx.cardview.widget.CardView>
+
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="45dp"
-            android:elevation="20dp"
+            android:layout_marginTop="500dp"
             android:background="@drawable/bg_rounded_rect"
             android:scrollbars="none">
 
@@ -78,33 +85,23 @@
                 android:layout_margin="20dp"
                 android:orientation="vertical">
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="170dp"
+                <TextView
+                    android:id="@+id/tvHasilPrediksi"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:cardBackgroundColor="@color/yellow3"
-                    android:layout_marginStart="100dp"
-                    android:layout_marginTop="30dp"
-                    app:cardCornerRadius="15dp"
-                    app:cardElevation="0dp"
-                    app:cardUseCompatPadding="true">
-
-                    <TextView
-                        android:id="@+id/tvHasilPrediksi"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:drawablePadding="10dp"
-                        android:padding="8dp"
-                        android:text="Hasil Prediksi"
-                        android:layout_gravity="center"
-                        android:textAppearance="@style/CustomtextStyle1"/>
-
-                </androidx.cardview.widget.CardView>
+                    android:layout_marginTop="20dp"
+                    android:gravity="center"
+                    android:text="Hasil Prediksi"
+                    android:layout_gravity="center"
+                    android:textColor="@color/yellow2"
+                    android:textAppearance="@style/CustomtextStyle3"/>
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     app:cardBackgroundColor="@color/green3"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="15dp"
                     app:cardCornerRadius="15dp"
                     app:cardElevation="0dp"
                     app:cardUseCompatPadding="true">
@@ -120,11 +117,8 @@
                         android:textAppearance="@style/CustomtextStyle1"/>
 
                 </androidx.cardview.widget.CardView>
-
             </LinearLayout>
-
         </androidx.core.widget.NestedScrollView>
-
-    </LinearLayout>
+    </FrameLayout>
 
 </RelativeLayout>
