--- a/app/src/main/res/layout/activity_kamera.xml
+++ b/app/src/main/res/layout/activity_kamera.xml
@@ -27,100 +27,83 @@
         app:touchToFocus="true"
         app:zsl="true" />
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/capture_photo"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_gravity="start|center"
-        android:layout_marginLeft="150dp"
-        android:layout_marginTop="400dp"
-        android:clickable="true"
-        app:cardBackgroundColor="@color/green2"
-        app:cardCornerRadius="25dp"
-        app:cardElevation="5dp"
-        app:cardUseCompatPadding="true">
-
-        <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:padding="10dp"
-            android:layout_gravity="center"
-            android:layout_marginBottom="10dp"
-            android:src="@drawable/ic_search"
-            app:tint="@android:color/white" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Deteksi"
-            android:layout_marginBottom="5dp"
-            android:textAppearance="@style/CustomtextStyle1"
-            android:textColor="@color/white"
-            android:layout_gravity="center|bottom"/>
-
-
-    </androidx.cardview.widget.CardView>
-
-    <androidx.core.widget.NestedScrollView
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="450dp"
-        android:background="@drawable/bg_rounded_rect"
-        android:scrollbars="none">
+        android:orientation="vertical"
+        android:gravity="center">
 
+        <androidx.cardview.widget.CardView
+            android:id="@+id/capture_photo"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="80dp"
+            android:layout_gravity="center"
+            android:clickable="true"
+            app:cardBackgroundColor="@color/green2"
+            app:cardCornerRadius="25dp"
+            app:cardElevation="5dp"
+            app:cardUseCompatPadding="true">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:orientation="vertical">
+            <ImageView
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:padding="10dp"
+                android:layout_gravity="center"
+                android:layout_marginBottom="10dp"
+                android:src="@drawable/ic_search"
+                app:tint="@android:color/white" />
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="170dp"
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:cardBackgroundColor="@color/yellow3"
-                android:layout_marginStart="100dp"
-                android:layout_marginTop="20dp"
-                app:cardCornerRadius="15dp"
-                app:cardElevation="0dp"
-                app:cardUseCompatPadding="true">
+                android:text="Deteksi"
+                android:layout_marginBottom="5dp"
+                android:textAppearance="@style/CustomtextStyle1"
+                android:textColor="@color/white"
+                android:layout_gravity="center|bottom"/>
+
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="450dp"
+            android:background="@drawable/bg_rounded_rect"
+            android:scrollbars="none">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/tvHasilPrediksi"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:drawablePadding="10dp"
-                    android:padding="8dp"
+                    android:layout_marginTop="20dp"
+                    android:gravity="center"
                     android:text="Hasil Prediksi"
+                    android:layout_gravity="center"
+                    android:textColor="@color/yellow2"
+                    android:textAppearance="@style/CustomtextStyle3"/>
+
+                <TextView
+                    android:id="@+id/tvHasil1"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="15dp"
+                    android:text="Hasil"
+                    android:padding="8dp"
+                    android:gravity="center"
+                    android:background="@drawable/background_text"
                     android:layout_gravity="center"
                     android:textAppearance="@style/CustomtextStyle1"/>
 
-            </androidx.cardview.widget.CardView>
-
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:cardBackgroundColor="@color/green3"
-                    android:layout_marginTop="15dp"
-                    app:cardCornerRadius="15dp"
-                    app:cardElevation="0dp"
-                    app:cardUseCompatPadding="true">
-
-                    <TextView
-                        android:id="@+id/tvHasil1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:drawablePadding="10dp"
-                        android:padding="8dp"
-                        android:text="Hasil"
-                        android:layout_gravity="center"
-                        android:textAppearance="@style/CustomtextStyle1"/>
-
-                </androidx.cardview.widget.CardView>
-
-        </LinearLayout>
-
-    </androidx.core.widget.NestedScrollView>
+            </LinearLayout>
+        </androidx.core.widget.NestedScrollView>
+    </FrameLayout>
 
 </RelativeLayout>
