--- a/app/src/main/res/layout/fragment_scan.xml
+++ b/app/src/main/res/layout/fragment_scan.xml
@@ -10,7 +10,7 @@
 
     <TextView
         android:id="@+id/mOpsi"
-        android:layout_width="250dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:layout_gravity="center"
@@ -21,7 +21,7 @@
 
     <TextView
         android:id="@+id/mDeskripsi"
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
@@ -33,8 +33,7 @@
         android:id="@+id/button_camera"
         android:layout_width="250dp"
         android:layout_height="250dp"
-        android:layout_gravity="start|center"
-        android:layout_marginStart="80dp"
+        android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:clickable="true"
         app:cardBackgroundColor="@color/white"
@@ -64,8 +63,7 @@
         android:id="@+id/button_gallery"
         android:layout_width="250dp"
         android:layout_height="250dp"
-        android:layout_gravity="start|center"
-        android:layout_marginStart="80dp"
+        android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:clickable="true"
         app:cardBackgroundColor="@color/white"
