--- a/app/src/main/res/layout/list_harga.xml
+++ b/app/src/main/res/layout/list_harga.xml
@@ -1,32 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="20dp"
+    android:layout_marginBottom="20dp"
+    android:orientation="horizontal">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/tvDKI"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_margin="35dp"
-        android:orientation="horizontal">
+        android:maxLines="2"
+        android:text="DKI Jakarta"
+        android:textAppearance="@style/CustomtextStyle1"
+        android:textSize="14sp">
+    </TextView>
 
-        <TextView
-            android:id="@+id/tvDKI"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="DKI Jakarta"
-            android:textAppearance="@style/CustomtextStyle1"
-            android:textSize="14sp">
-        </TextView>
+    <TextView
+        android:id="@+id/tvPrice"
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:text="Rp15.000"
+        android:textSize="14sp"
+        android:textAppearance="@style/CustomtextStyle1">
+    </TextView>
+</LinearLayout>
 
-        <TextView
-            android:id="@+id/tvPrice"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="200dp"
-            android:text="Rp15.000"
-            android:textSize="14sp"
-            android:textAppearance="@style/CustomtextStyle1">
-        </TextView>
 
-    </LinearLayout>
-</RelativeLayout>
