--- a/app/src/main/res/layout/fragment_price.xml
+++ b/app/src/main/res/layout/fragment_price.xml
@@ -59,6 +59,27 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Harga pada tanggal : "
+                    android:textAppearance="@style/CustomtextStyle1"/>
+
+                <TextView
+                    android:id="@+id/tvCreated"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="26 Mei 2023"
+                    android:textAppearance="@style/CustomtextStyle1"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_marginTop="20dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
                     android:id="@+id/tvProvinsi"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
