--- a/app/src/main/res/layout/list_konten.xml
+++ b/app/src/main/res/layout/list_konten.xml
@@ -44,8 +44,9 @@
 
             <Button
                 android:id="@+id/btPhone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="200dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginBottom="5dp"
                 android:background="@drawable/background_text"
                 android:padding="10dp"
